--- a/config/application.yml
+++ b/config/application.yml
@@ -3,7 +3,9 @@
 DOMAIN: ""
 SENDER_EMAIL: ""
 MAILER_DOMAIN: ""
-SMTP_SERVER: ""
+SMTP_SERVER: "smtp.sendgrid.net"
 SMTP_PORT: "587"
 SMTP_USER: ""
 SMTP_PWD: ""
+SENDGRID_USERNAME: "app33151675@heroku.com"
+SENDGRID_PASSWORD: "o5pbcyfr"
